--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon --exec babel-node ./bin/www"
+    "start": "nodemon --exec babel-node --inspect ./bin/www"
   },
   "dependencies": {
     "async": "^3.0.0",
@@ -11,7 +11,6 @@
     "cookie-parser": "~1.4.3",
     "debug": "~4.1.1",
     "express": "~4.17.1",
-    "json-server": "^0.15.1",
     "lodash": "^4.17.15",
     "mongodb": "^3.3.2",
     "mongoose": "^5.7.3",
