--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.0",
     "cookie-parser": "~1.4.3",
     "debug": "~4.1.1",
+    "do-wrapper": "^4.0.0-alpha.1",
     "express": "~4.17.1",
     "lodash": "^4.17.15",
     "mongodb": "^3.2.3",
