--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,5 +1,5 @@
 env:
-  browser: true
+  browser: false
   es6: true
 extends: standard
 globals:
@@ -7,5 +7,4 @@ globals:
   SharedArrayBuffer: readonly
 parserOptions:
   ecmaVersion: 2018
-  sourceType: module
 rules: {}
