--- a/package.json
+++ b/package.json
@@ -3,19 +3,23 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon --exec babel-node --inspect ./bin/www"
+    "start": "nodemon --ignore './logs/*' --exec babel-node --inspect=7000 ./bin/www",
+    "import": "browser-sync start --proxy 'localhost:3333' --startPath '/import' --watch './'",
+    "export": "./oobwordpress/import.sh"
   },
   "dependencies": {
     "async": "^3.0.0",
     "axios": "^0.19.0",
+    "browser-sync": "^2.26.7",
     "cookie-parser": "~1.4.3",
     "debug": "~4.1.1",
     "do-wrapper": "^4.0.0-alpha.1",
     "express": "~4.17.1",
     "lodash": "^4.17.15",
-    "mongodb": "^3.2.3",
+    "mongodb": "^3.5.3",
     "mongoose": "^5.7.5",
     "morgan": "~1.9.0",
+    "node-http": "0.0.5",
     "woocommerce-api": "^1.5.0"
   },
   "devDependencies": {
@@ -24,6 +28,7 @@
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "browser-sync-reuse-tab": "^1.0.3",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.18.2",
