--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
   },
   "dependencies": {
     "async": "^3.0.0",
-    "axios": "^0.19.2",
+    "axios": "^0.19.0",
     "browser-sync": "^2.26.7",
     "cookie-parser": "~1.4.3",
     "debug": "~4.1.1",
     "do-wrapper": "^4.0.0-alpha.1",
-    "dotenv": "^8.2.0",
     "express": "~4.17.1",
     "lodash": "^4.17.15",
     "mongodb": "^3.5.3",
     "mongoose": "^5.7.5",
     "morgan": "~1.9.0",
+    "node-http": "0.0.5",
     "woocommerce-api": "^1.5.0"
   },
   "devDependencies": {
@@ -28,12 +28,14 @@
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "browser-sync-reuse-tab": "^1.0.3",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^9.2.0",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.1",
-    "nodemon": "^1.19.3"
+    "nodemon": "^1.19.3",
+    "webpack": "^4.41.0"
   }
 }
